Organizando estructura header y body

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+* {
+    box-sizing: border-box;
+}
+
 :root {
     --main-color: #FFFFFF;
     --secondary-color: #1D1D1D;
@@ -5,14 +10,66 @@
     --main-font-family: 'Poppins', sans-serif;
 }
 
-.container {
+/*HEADER*/
+
+.container-header {
+    position: fixed;
+}
+
+.header-sections {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px;
+}
+
+nav {
+    width: 100%;
+}
+
+.nav-list {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    list-style: none;
+}
+
+.nav-item {
+    text-decoration: none;
+    text-transform: uppercase;
+    font: var(--main-font-family);
+    color: var(--varColor);
+    font-weight: 100;
+}
+
+.icons {
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    list-style: none;
+}
+
+.header-icon {
+    text-transform: uppercase;
+    font: var(--main-font-family);
+    color: var(--varColor);
+    font-weight: 100;
+}
+
+.header-icon:hover {
+    cursor: pointer;
+}
+
+/*BODY*/
+
+.container-body {
     display: flex;
     padding: 83px
 }
 
-.container-imagenes-laterales{
+.container-imagenes-laterales {
     display: flex;
     flex-direction: column;
-    width:80px;
+    width: 80px;
     margin-right: 24px
 }
